--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -17,14 +17,13 @@ services:
     environment: 
       production: "False"
       FYLE_CLIENT_ID: tpaYfU7VLyrEN
-      API_URL: http://localhost:8002/api
+      API_URL: http://localhost:8003/api
       APP_URL: http://localhost:4200
-      OLD_QBO_APP_URL: http://localhost:4201/auth/shared_login
+      OLD_XERO_APP_URL: http://localhost:4201/auth/shared_login
       CALLBACK_URI: http://localhost:4200/auth/callback
-      QBO_CLIENT_ID: ABTemcw1ngLRye1iqW25EI2CyNUzdBSkNYWYxaFtkaJNgRcbM5
-      QBO_SCOPE: com.intuit.quickbooks.accounting
-      QBO_AUTHORIZE_URI: https://appcenter.intuit.com/connect/oauth2
-      QBO_APP_URL: https://app.sandbox.qbo.intuit.com
+      XERO_CLIENT_ID: BB139467D5424B14BE3DBF92895EB6CF
+      XERO_SCOPE: accounting.transactions accounting.settings accounting.contacts offline_access accounting.attachments
+      XERO_AUTHORIZE_URI: https://login.xero.com/identity/connect/authorize
       SENTRY_DSN: ''
       SENTRY_ENV: ''
       RELEASE: 'local'
