--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/common": "~13.3.9",
     "@angular/compiler": "~13.3.9",
     "@angular/core": "~13.3.9",
+    "@angular/cli": "~13.3.8",
+    "@angular/compiler-cli": "~13.3.9",
+    "@angular-devkit/build-angular": "~13.3.8",
     "@angular/flex-layout": "^13.0.0-beta.36",
     "@angular/forms": "~13.3.9",
     "@angular/material": "~13.3.7",
@@ -29,20 +32,18 @@
     "@sentry/angular": "^6.19.7",
     "@sentry/tracing": "^6.19.7",
     "rxjs": "~6.6.0",
+    "typescript": "~4.6.4",
     "ts-cacheable": "^1.0.6",
     "ts-node": "^10.7.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.8",
     "@angular-eslint/builder": "12.7.0",
     "@angular-eslint/eslint-plugin": "12.7.0",
     "@angular-eslint/eslint-plugin-template": "12.7.0",
     "@angular-eslint/schematics": "12.7.0",
     "@angular-eslint/template-parser": "12.7.0",
-    "@angular/cli": "~13.3.8",
-    "@angular/compiler-cli": "~13.3.9",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
