--- a/deployment/production/controller.yml
+++ b/deployment/production/controller.yml
@@ -1,38 +1,38 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: xero-app
+  name: xero-app-2
   namespace: integrations
   labels:
-    app: xero-app
+    app: xero-app-2
 spec:
   ports:
     - port: 80
   selector:
-    app: xero-app
+    app: xero-app-2
   type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: xero-app
+  name: xero-app-2
   namespace: integrations
   labels:
-    app: xero-app
+    app: xero-app-2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: xero-app
+      app: xero-app-2
   strategy:
     type: RollingUpdate
   template:
     metadata:
       labels:
-        app: xero-app
+        app: xero-app-2
     spec:
       containers:
-        - name: xero-app
+        - name: xero-app-2
           image: docker.io/{{DOCKERHUB_USERNAME}}/fyle_xero-app-2:{{RELEASE_VERSION}}
           resources:
             limits:
