--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~13.3.8",
     "@angular/animations": "~13.3.9",
     "@angular/cdk": "^13.3.7",
+    "@angular/cli": "~13.3.8",
     "@angular/common": "~13.3.9",
     "@angular/compiler": "~13.3.9",
-    "@angular/core": "~13.3.9",
-    "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.9",
-    "@angular-devkit/build-angular": "~13.3.8",
+    "@angular/core": "~13.3.9",
     "@angular/flex-layout": "^13.0.0-beta.36",
     "@angular/forms": "~13.3.9",
     "@angular/material": "~13.3.7",
@@ -31,10 +31,11 @@
     "@rxweb/reactive-form-validators": "^2.1.6",
     "@sentry/angular": "^6.19.7",
     "@sentry/tracing": "^6.19.7",
+    "cypress": "^12.0.2",
     "rxjs": "~6.6.0",
-    "typescript": "~4.6.4",
     "ts-cacheable": "1.0.6",
     "tslib": "^2.2.0",
+    "typescript": "~4.6.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
