--- a/.github/e2e-test-staging.yml
+++ b/.github/e2e-test-staging.yml
@@ -103,6 +103,7 @@ jobs:
       COMMIT_INFO_SHA: ${{github.event.pull_request.head.sha}}
       APP_URL: ${{ secrets.APP_URL }}
       API_URL: ${{ secrets.API_URL }}
+      E2E_TESTS_WORKSPACE_ID: ${{ secrets.E2E_TESTS_WORKSPACE_ID }}
       E2E_TESTS_ENV: ${{ secrets.E2E_TESTS_ENV }}
       E2E_TESTS_REFRESH_TOKEN: ${{ secrets.E2E_TESTS_REFRESH_TOKEN }}
       E2E_TESTS_ORG_ID: ${{ secrets.E2E_TESTS_ORG_ID }}
