Fixes 2 - Adding Cypress Folder for Checks

--- a/.github/e2e-test-staging.yml
+++ b/.github/e2e-test-staging.yml
@@ -28,6 +28,7 @@ jobs:
           filters: |
             src:
               - 'src/**'
+              - 'cypress/**'
       - name: Prepare for end to end tests
         if: steps.filter.outputs.src == 'true'
         run: npm run setup:env
