--- a/.github/e2e-test-staging.yml
+++ b/.github/e2e-test-staging.yml
@@ -28,7 +28,8 @@ jobs:
           filters: |
             src:
               - 'src/**'
-              - 'cypress/**'
+          path: |
+            ./cypress
       - name: Prepare for end to end tests
         if: steps.filter.outputs.src == 'true'
         run: npm run setup:env
