add path for cypress

--- a/.github/e2e-test-staging.yml
+++ b/.github/e2e-test-staging.yml
@@ -28,8 +28,7 @@ jobs:
           filters: |
             src:
               - 'src/**'
-          path: |
-            ./cypress
+              - 'cypress/**'
       - name: Prepare for end to end tests
         if: steps.filter.outputs.src == 'true'
         run: npm run setup:env
