Fixes for GH Workflow

--- a/.github/e2e-test-staging.yml
+++ b/.github/e2e-test-staging.yml
@@ -104,10 +104,10 @@ jobs:
       COMMIT_INFO_SHA: ${{github.event.pull_request.head.sha}}
       APP_URL: ${{ secrets.APP_URL }}
       API_URL: ${{ secrets.API_URL }}
-      E2E_TESTS_WORKSPACE_ID_1: ${{ secrets.E2E_TESTS_WORKSPACE_ID }}
-      E2E_TESTS_WORKSPACE_ID_2: ${{ secrets.E2E_TESTS_WORKSPACE_ID }}
+      E2E_TESTS_WORKSPACE_ID_1: ${{ secrets.E2E_TESTS_WORKSPACE_ID_1 }}
+      E2E_TESTS_WORKSPACE_ID_2: ${{ secrets.E2E_TESTS_WORKSPACE_ID_2 }}
       E2E_TESTS_ENV: ${{ secrets.E2E_TESTS_ENV }}
-      E2E_TESTS_REFRESH_TOKEN_1: ${{ secrets.E2E_TESTS_REFRESH_TOKEN }}
-      E2E_TESTS_ORG_ID_1: ${{ secrets.E2E_TESTS_ORG_ID }}
-      E2E_TESTS_REFRESH_TOKEN_2: ${{ secrets.E2E_TESTS_REFRESH_TOKEN }}
-      E2E_TESTS_ORG_ID_2: ${{ secrets.E2E_TESTS_ORG_ID }}
+      E2E_TESTS_REFRESH_TOKEN_1: ${{ secrets.E2E_TESTS_REFRESH_TOKEN_1 }}
+      E2E_TESTS_ORG_ID_1: ${{ secrets.E2E_TESTS_ORG_ID_1 }}
+      E2E_TESTS_REFRESH_TOKEN_2: ${{ secrets.E2E_TESTS_REFRESH_TOKEN_2 }}
+      E2E_TESTS_ORG_ID_2: ${{ secrets.E2E_TESTS_ORG_ID_2 }}
