--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "test": "ng test",
     "unit_test_ci": "npm run setup_env && ng test --watch=false --browsers=ChromeHeadlessCustom",
     "setup_env": "node scripts/setup_env.js",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "cypress:open": "cypress open"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~13.3.8",
     "@angular/animations": "~13.3.9",
     "@angular/cdk": "^13.3.7",
+    "@angular/cli": "~13.3.8",
     "@angular/common": "~13.3.9",
     "@angular/compiler": "~13.3.9",
-    "@angular/core": "~13.3.9",
-    "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.9",
-    "@angular-devkit/build-angular": "~13.3.8",
+    "@angular/core": "~13.3.9",
     "@angular/flex-layout": "^13.0.0-beta.36",
     "@angular/forms": "~13.3.9",
     "@angular/material": "~13.3.7",
@@ -32,9 +33,9 @@
     "@sentry/angular": "^6.19.7",
     "@sentry/tracing": "^6.19.7",
     "rxjs": "~6.6.0",
-    "typescript": "~4.6.4",
     "ts-cacheable": "1.0.6",
     "tslib": "^2.2.0",
+    "typescript": "~4.6.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
+    "cypress": "^12.0.2",
     "eslint": "^7.26.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.16",
