--- a/.github/workflows/e2e-test-staging.yml
+++ b/.github/workflows/e2e-test-staging.yml
@@ -31,7 +31,7 @@ jobs:
               - 'cypress/**'
       - name: Prepare for end to end tests
         if: steps.filter.outputs.src == 'true'
-        run: npm run setup:env
+        run: npm run setup_env
       - name: Cache Dependencies
         uses: actions/cache@v3
         id: cache
@@ -69,7 +69,7 @@ jobs:
         with:
           node-version: 14
       - name: Prepare for end to end tests
-        run: npm run setup:env
+        run: npm run setup_env
       - name: Cache Dependencies
         uses: actions/cache@v3
         id: cache
