--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@rxweb/reactive-form-validators": "^2.1.6",
     "@sentry/angular": "^6.19.7",
     "@sentry/tracing": "^6.19.7",
+    "esbuild": "^0.16.4",
     "rxjs": "~6.6.0",
     "ts-cacheable": "1.0.6",
     "tslib": "^2.2.0",
