--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "local_dev_dc": "npm run setup_env && ng serve --host 0.0.0.0 --disable-host-check",
-    "build": "npm run setup_env && ng build",
+    "local_dev_dc": "npm run setup:env && ng serve --host 0.0.0.0 --disable-host-check",
+    "build": "npm run setup:env && ng build",
     "test": "ng test",
-    "unit_test_ci": "npm run setup_env && ng test --watch=false --browsers=ChromeHeadlessCustom",
-    "setup_env": "node scripts/setup_env.js",
+    "unit_test_ci": "npm run setup:env && ng test --watch=false --browsers=ChromeHeadlessCustom",
+    "setup:env": "node scripts/setup_env.js",
     "lint": "ng lint",
     "cypress:open": "cypress open"
   },
@@ -49,6 +49,8 @@
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
     "cypress": "^12.0.2",
+    "esbuild": "^0.16.4",
+    "piscina": "^3.2.0",
     "eslint": "^7.26.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.16",
@@ -57,5 +59,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.4"
+  },
+  "optionalDependencies": {
+    "esbuild-android-arm64": "^0.15.18"
   }
 }
