--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@angular/platform-browser": "~13.3.9",
     "@angular/platform-browser-dynamic": "~13.3.9",
     "@angular/router": "~13.3.9",
-    "@auth0/angular-jwt": "^5.0.2",
+    "@auth0/angular-jwt": "~5.0.2",
     "@rxweb/reactive-form-validators": "^2.1.6",
     "@sentry/angular": "^6.19.7",
     "@sentry/tracing": "^6.19.7",
