--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,8 +1,11 @@
-name: Unit testing
+name: Codecov Report Upload
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
-    types: [assigned,  opened,  synchronize,  reopened]
+    types: [labeled]
 
 jobs:
   unit-test:
