--- a/.github/workflows/staging_deployment.yml
+++ b/.github/workflows/staging_deployment.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: Staging
     steps:
+      - uses: actions/checkout@v2
       - name: push to dockerhub
         uses: fylein/docker-release-action@master
         env:
